// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus144OnboardFiles {
extensions 12 to 112;

  optional ccsds_mal.protobuf.UINTEGER partitionId = 1;
  optional ccsds_mal.protobuf.UINTEGER fileProtectionStatus = 2;
  optional ccsds_mal.protobuf.UINTEGER fileId = 3;
  optional ccsds_mal.protobuf.UINTEGER fileAddress = 4;
  optional ccsds_mal.protobuf.UINTEGER fileSize = 5;
  optional ccsds_mal.protobuf.UINTEGER uploadedFileChecksum = 6;
  optional ccsds_mal.protobuf.STRING fileType = 7;
  optional ccsds_mal.protobuf.UINTEGER fileMode = 8;
  optional ccsds_mal.protobuf.TIME fileCreationTime = 9;
  optional ccsds_mal.protobuf.UINTEGER computedFileChecksum = 10;
  optional pusGroundModel.protobuf.PusElement pusElement = 11;
}
