// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditor.protobuf;

message Pus144OnboardFile {
extensions 33 to 133;

  optional ccsds_mal.protobuf.STRING partitionId = 1;
  optional ccsds_mal.protobuf.UINTEGER fileId = 2;
  optional ccsds_mal.protobuf.STRING fileType = 3;
  optional ccsds_mal.protobuf.UINTEGER fileSize = 4;
  optional ccsds_mal.protobuf.STRING fileCreationTime = 5;
  optional ccsds_mal.protobuf.STRING fileProtectionStatus = 6;
  optional ccsds_mal.protobuf.STRING fileMode = 7;
  optional ccsds_mal.protobuf.STRING fileAddress = 8;
  optional ccsds_mal.protobuf.STRING uploadedFileChecksum = 9;
  optional ccsds_mal.protobuf.STRING computedFileChecksum = 10;
  optional ccsds_mal.protobuf.BOOLEAN isFileSizeSet = 11;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeOnBoardFileId = 12;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeOnBoardFileId = 13;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileProtectionStatus = 14;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileProtectionStatus = 15;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileAddress = 16;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileAddress = 17;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileMode = 18;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileMode = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileType = 20;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileType = 21;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileSize = 22;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileSize = 23;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeUploadedChecksum = 24;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeUploadedChecksum = 25;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileCreationTime = 26;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileCreationTime = 27;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeComputedChecksum = 28;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeComputedChecksum = 29;
  optional ccsds_mal.protobuf.ULONG uniqueId = 30;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 31;
  optional ccsds_mal.protobuf.STRING serviceApidName = 32;
}
